# totem-server

./: .dockerignore  .eslintrc.json  .gitattributes  .gitignore  .mise.toml  .oxfmtrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .tool-versions  CHECKS  CLAUDE.md  Makefile  Procfile  README.md  SECURITY.md  app.json  build.mjs  build.ts  codebook.toml  eslint.config.mjs  global.d.ts  local.ci.yml  local.yml  manage.py  openapi-ts.config.ts  oxlint.config.ts  package-lock.json  package.json  postcss.config.js  production.yml  prompts.json  pyproject.toml  tailwind.config.js  tailwind.config.mjs  tsconfig.json  users.json  vitest.config.ts
.claude/: settings.local.json
.envs/.ci/: .django
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml
.zed/: debug.json  settings.json
assets/css/: styles.css
assets/js/: app.js  app.ts  bot.js  bot.ts  copyToClipboard.js  dropdown.js  emailSpellCheck.js  fingerprint.js  htmx-loader.js  logger.js  loginChannel.js  promptsearch.js  rruleWidget.js  shadowfill.js  social.ts  split.ts  time.ts  timezone.js
assets/js/client/: index.ts  schemas.gen.ts  sdk.gen.ts  services.gen.ts  types.gen.ts
assets/js/components/: AddToCalendarButton.tsx  avatar.tsx  button.js  card.js  circles.module.css  circles.test.tsx  circles.tsx  datePicker.tsx  detailSidebar.tsx  dropdown.js  editAvatar.tsx  errors.tsx  eventCalendar.css  eventCalendar.tsx  icons.tsx  index.js  index.jsx  index.tsx  navbar.js  navmenu.js  popover.js  promptSearch.js  promptSearch.jsx  promptSearch.tsx  register.js  spaces.tsx  time.tsx  tooltip.tsx
assets/js/libs/: bot.ts  copyToClipboard.js  copyToClipboard.ts  csrf.ts  deepSignal.ts  emailSpellCheck.js  emailSpellCheck.ts  logger.js  logger.ts  loginChannel.js  loginChannel.ts  postData.ts  shadowfill.js  shadowfill.ts  time.ts  timezone.ts  tippy.ts  urls.ts
assets/js/models/: Email.ts  LoginOut.ts  Message.ts  Token.ts  TokenOut.ts  UserSchema.ts
compose/local/assets/: Dockerfile
compose/local/django/: Dockerfile  start
compose/local/postgres/: Dockerfile  postgresql.conf
compose/production/django/: Dockerfile  entrypoint  predeploy  start
compose/production/postgres/: postgresql.conf
compose/production/traefik/: traefik.yml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  filter.py  local.py  production.py  test.py
data/: prompts.json
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
plans/: admin.py  models.py  urls.py
plans/migrations/: 0002_circleplan_date_modified_circleplan_display_date.py  0003_circleplan_published.py
plans/templates/plans/: circleplan_detail.html  circleplan_list.html
requirements/: base.in  base.txt  local.in  local.txt  production.in  production.txt
scripts/: generate_api_models.mjs  load_prompts.py  prompts.json
tests/: scratch.py
totem/: conftest.py
totem/api/: api.py  apps.py  auth.py  mobile_api.py  oauth.py
totem/api/migrations/: 0001_create_oauth_application.py
totem/api/tests/: test_auth.py  test_avatar.py  test_mobile_session_auth.py  test_oauth.py
totem/blog/: admin.py  apps.py  mobile_api.py  models.py  urls.py  views.py
totem/blog/migrations/: 0001_initial.py  0001_initial_squashed_0012_alter_blogpost_summary.py  0002_blogpost_author.py  0003_blogpost_subtitle.py  0004_blogpost_publish_alter_blogpost_content.py  0005_alter_blogpost_date_published_and_more.py  0006_alter_blogpost_header_image.py  0007_alter_blogpost_header_image.py  0008_alter_blogpost_content.py  0009_alter_blogpost_content.py  0010_blogpost_read_time.py  0011_blogpost_summary.py  0012_alter_blogpost_summary.py
totem/blog/tests/: factories.py  test_blog.py  test_blog_api.py
totem/circles/: actions.py  admin.py  api.py  apps.py  calendar.py  filters.py  img_gen.py  jsonld.py  livekit.py  mobile_api.py  models.py  schemas.py  shotify.py  tasks.py  tests.py  urls.py  views.py
totem/circles/calendar/: calendar.py
totem/circles/migrations/: 0001_initial.py  0001_initial_squashed_0046_move_meeting_provider_to_circle.py  0002_alter_circle_author.py  0003_rename_starts_circle_start.py  0004_circle_attendees.py  0005_alter_circle_image_url.py  0006_remove_circle_image_url.py  (+40 more)
totem/course/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
totem/dev/: apps.py  urls.py  views.py
totem/email/: admin.py  apps.py  data.py  email_templates.py  emails.py  exceptions.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
totem/livekit/: livekit.py  mobile_api.py
totem/meetings/: livekit_provider.py  mobile_api.py  room_state.py  schemas.py  tasks.py
totem/notifications/: __init__.py  admin.py  apps.py  models.py  notifications.py  schemas.py  services.py  tasks.py  utils.py  validators.py
totem/onboard/: admin.py  apps.py  mobile_api.py  models.py  schemas.py  tests.py  urls.py  views.py
totem/pages/: admin.py  apps.py  data.py  forms.py  models.py  proxied_site.py  qrmaker.py  tests.py  urls.py  views.py  webflow.py
totem/plans/: admin.py  apps.py  models.py  urls.py  views.py
totem/repos/: apps.py  models.py  tests.py  urls.py  views.py
totem/rooms/: admin.py  api.py  apps.py  livekit.py  models.py  proxy.py  schemas.py  state_machine.py  tasks.py  urls.py
totem/series/: apps.py  mobile_api.py  models.py  schemas.py
totem/spaces/: actions.py  admin.py  api.py  apps.py  filters.py  jsonld.py  models.py  schemas.py  tasks.py  urls.py  views.py
totem/templates/: 403.html  404.html  500.html  _analytics.html  auth_base.html  base.html  footer.html  footer_mini.html  header.html
totem/uploads/: admin.py  apps.py  models.py  tests.py
totem/users/: actions.py  actions_base.py  admin.py  analytics.py  apps.py  avatar.py  forms.py  managers.py  mobile_api.py  models.py  schemas.py  tasks.py  urls.py  views.py
totem/utils/: admin.py  exports.py  fields.py  grant_metrics.py  hash.py  images.py  img_gen.py  mailerlite.py  md.py  middleware.py  model.py  models.py  pool.py  slack.py  stats.py  tag_utils.py  utils.py  widgets.py
workers/: posthog-proxy.js
(+418 files in other folders)
